cmake_minimum_required(VERSION 3.24)
project(CppProject01s29017)

set(CMAKE_CXX_STANDARD 20)

add_executable(CppProject01s29017 main.cpp consoleManager.cpp reader.cpp commandUtils.cpp addCommand.cpp sortCommand.cpp selectCommand.cpp searchCommand.cpp manCommand.cpp command.cpp editCommand.cpp deleteCommand.cpp addCategoryCommand.cpp deleteCategoryCommand.cpp printCategoryCommand.cpp readerUtils.cpp)
